# njmstore

./: README.md  docker-compose.yaml  njmstore.sln
NjmStore.AuthService/: Config.cs  HostingExtensions.cs  NjmStore.AuthService.csproj  Program.cs
NjmStore.AuthService/Pages/: Extensions.cs  IdentityServerSuppressions.cs  Index.cshtml  Index.cshtml.cs  Log.cs  SecurityHeadersAttribute.cs  Telemetry.cs  TestUsers.cs  _ViewImports.cshtml
NjmStore.AuthService/Pages/Account/: AccessDenied.cshtml  (+1 more)
NjmStore.DbSeeder/: NjmStore.DbSeeder.csproj  Program.cs
NjmStore.DbSeeder/Commands/: GetSpotifyRecommendationsCommand.cs  GetSpotifyTokenCommand.cs  SpotifyGenericCommandSettings.cs
NjmStore.DbSeeder/DTO/: SpotifyAccessToken.cs  SpotifyAlbumObject.cs  SpotifyClientCredentials.cs  SpotifyImageObject.cs  SpotifySimplifiedArtistObject.cs  SpotifyTrackObject.cs
NjmStore.DbSeeder/Services/: ISpotifyScraper.cs  SpotifyHttpScraper.cs
NjmStore.OrderService/: NjmStore.OrderService.http
NjmStore.ProductService/: NjmStore.ProductService.csproj  NjmStore.ProductService.http  Program.cs  appsettings.Development.json
NjmStore.ProductService/Data/: ProductDbContext.cs
NjmStore.ProductService/Models/: Album.cs  AlbumFormat.cs  AlbumGenre.cs  AlbumTrack.cs  Artist.cs  Collection.cs  Review.cs  Track.cs  Variant.cs
NjmStore.ProductService/Properties/: launchSettings.json
NjmStore.SearchService/: NjmStore.SearchService.http
NjmStore.Test/: NjmStore.Test.csproj  UnitTest1.cs
recommender/: pyproject.toml
webapp/: .eslintrc.json  package.json  pnpm-lock.yaml  tsconfig.json
(+60 files in other folders)
