[tool.poetry]
name = "recommender"
version = "0.1.0"
description = "Product recommendation microservice based on Typesense"
authors = ["piotr.swiecik <piotr.swiecik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
typesense = "^0.21.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
